--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
-     }
+    },
+    "cSpell.words": [
+        "TMBD"
+    ]
 }
